Revert "Added custom networking errors"
This reverts commit 38d740e34e37a55939453e7a2f4773829ac19e9e.

--- a/GameCoreNative.NetCore.vcxproj
+++ b/GameCoreNative.NetCore.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Errors.h" />
     <ClInclude Include="IAsyncIO.h" />
     <ClInclude Include="Connection.h" />
     <ClInclude Include="ASIOSocket.h" />
