--- a/GameCoreNative.NetCore.vcxproj.filters
+++ b/GameCoreNative.NetCore.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Server.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Errors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
